--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -1,6 +1,6 @@
 @article{DBLP:journals/chb/JacksonOCHABCKK20,
   author    = {Corey Brian Jackson and
-               Carsten S. {\O}sterlund and
+               Carsten S. Østerlund and
                Kevin Crowston and
                Mahboobeh Harandi and
                Sarah Allen and
