--- a/content/publication/humanfactors2020/cite.bib
+++ b/content/publication/humanfactors2020/cite.bib
@@ -1,1 +1,17 @@
+@InProceedings{10.1007/978-3-030-51057-2_11,
+author="Jackson, Corey
+and Anderson, Laura C.
+and Kieliszewski, Cheryl A.",
+editor="Spohrer, Jim
+and Leitner, Christine	",
+title="Methodological Reinforcements: Investigating Work Through Trace Data and Text",
+booktitle="Advances in the Human Side of Service Engineering",
+year="2020",
+publisher="Springer International Publishing",
+address="Cham",
+pages="70--76",
+abstract="In this article, we present a study of scientific discovery through trace data. Using data produced from (1) scientists' interactions on computer systems and (2) meeting transcripts generated from weekly project meetings, we analyzed the interactions and conversations of scientists surrounding a scientific discovery to determine whether trace data could provide markers for the discovery. The results describe the process of interacting with computer tools and disseminating results and highlight such markers. This study shows trace data, and advanced computational techniques are useful mechanisms for identifying work trajectories and, in some cases, provide context to work behaviors.",
+isbn="978-3-030-51057-2"
+}
+
 
