--- a/content/publication/cscw2019/cite.bib
+++ b/content/publication/cscw2019/cite.bib
@@ -1,4 +1,4 @@
-@article{DBLP:journals/cscw/JacksonCOH18,
+@article{journals/cscw/JacksonCOH18,
   author    = {Corey Brian Jackson and
                Kevin Crowston and
                Carsten S. {\O}sterlund and
